--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Version 2.0.01 (early alpha please test and report bugs)
+	updated for CB 1.5.2-R1.1
+	updated all APIs
+
 Version 2.0
 	updated for CB 1.3.2-R0.2
 	updated spout and vault depends
